--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -11,7 +11,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
-
+<p>Comentario en repositorio remoto</p>
 <nav>
 
     <button class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"  class="bi bi-person-lines-fill" viewBox="0 0 16 16">
