--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -38,36 +38,18 @@
 
 <div class="clearfix"></div>
 
+<div class="contenedor">
+  <img src="https://c.pxhere.com/images/34/12/8b5421353a9fc9f9905d17ea548b-1458897.jpg!d" width="1550mm" height="500mm"/>
+  <div class="nombre">Juan Octavio Matesin Moyano</div>
+  <div class="ciudad">La Cumbre, Córdoba</div>
+</div>
 
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://c.pxhere.com/photos/e2/71/life_beauty_scene_nature_landscape_earth_wild_climb-707922.jpg!d" class="d-block w-100"  alt="10">
-      </div>
-      <div class="carousel-item">
-        <img src="https://c.pxhere.com/images/76/d1/68fec52058c592da3304315b1c69-1661992.jpg!d" class="d-block w-100" alt="10">
-      </div>
-      <div class="carousel-item">
-        <img src="https://c.pxhere.com/photos/af/52/space_center_spacex_control_center_rocket_science_computers_controllers_cape_canaveral_cape_kennedy-893775.jpg!d" class="d-block w-100" alt="10">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-  </div>
 
+    <!-- Probando la funcion comentario-->
+  
 
 <script src="MY_FUNCTIONS.JS"></script>
 <body>
-    <section class="datos">
-    <h1 class="nombre">Juan Octavio Matesin Moyano</h1>
-<h2 class="ciudad">La Cumbre, Córdoba</h2>
-</section>
 <section>
     <h1 class="titulo">Acerca De</h1>
     <p>Full Stack Developer Jr.</p>
